[gd_scene load_steps=44 format=3 uid="uid://6r0dtmoa5oxw"]

[ext_resource type="Script" uid="uid://cqyru41lyaa8o" path="res://scripts/bug.gd" id="1_jahts"]
[ext_resource type="Texture2D" uid="uid://bmkfuaeckeiqy" path="res://assets/graphics/enemies/bug/attack/00010.png" id="1_xtffu"]
[ext_resource type="Shader" uid="uid://cpevo2lp38w01" path="res://scenes/enemies/bug.gdshader" id="2_abc4i"]
[ext_resource type="Texture2D" uid="uid://fvwx2wtt68ul" path="res://assets/graphics/enemies/bug/attack/00011.png" id="2_jahts"]
[ext_resource type="Texture2D" uid="uid://du120y2f1l2hl" path="res://assets/graphics/enemies/bug/attack/00012.png" id="3_abc4i"]
[ext_resource type="Texture2D" uid="uid://clt6wr0ackwpn" path="res://assets/graphics/enemies/bug/attack/00013.png" id="4_xww0a"]
[ext_resource type="Texture2D" uid="uid://de48i0yy2os5d" path="res://assets/graphics/enemies/bug/attack/00014.png" id="5_uc11a"]
[ext_resource type="Texture2D" uid="uid://lojua56b2uf5" path="res://assets/graphics/enemies/bug/attack/00015.png" id="6_ey6sa"]
[ext_resource type="Texture2D" uid="uid://drypqnokqbkjv" path="res://assets/graphics/enemies/bug/attack/00016.png" id="7_5fik3"]
[ext_resource type="Texture2D" uid="uid://ce64f8b5kutcw" path="res://assets/graphics/enemies/bug/attack/00017.png" id="8_aa7ts"]
[ext_resource type="Texture2D" uid="uid://copv8s0hxwdvn" path="res://assets/graphics/enemies/bug/attack/00018.png" id="9_1j4mh"]
[ext_resource type="Texture2D" uid="uid://bgb1gb4kqih84" path="res://assets/graphics/enemies/bug/attack/00019.png" id="10_aos45"]
[ext_resource type="Texture2D" uid="uid://bdxbj0nhscma3" path="res://assets/graphics/enemies/bug/attack/00020.png" id="11_wow0q"]
[ext_resource type="Texture2D" uid="uid://dvsy82o2kdvum" path="res://assets/graphics/enemies/bug/attack/00021.png" id="12_pj5iq"]
[ext_resource type="Texture2D" uid="uid://c6yc0qj8hnoy7" path="res://assets/graphics/enemies/bug/attack/00022.png" id="13_a8u0u"]
[ext_resource type="Texture2D" uid="uid://bc3os7s4q0vg2" path="res://assets/graphics/enemies/bug/attack/00023.png" id="14_i4x00"]
[ext_resource type="Texture2D" uid="uid://c6aktqruqww0d" path="res://assets/graphics/enemies/bug/attack/00024.png" id="15_vthgq"]
[ext_resource type="Texture2D" uid="uid://dlqpeoa7gi6v3" path="res://assets/graphics/enemies/bug/attack/00025.png" id="16_w8vyc"]
[ext_resource type="Texture2D" uid="uid://b220parte8vy6" path="res://assets/graphics/enemies/bug/attack/00026.png" id="17_d3kgc"]
[ext_resource type="Texture2D" uid="uid://cn4yf7111quvp" path="res://assets/graphics/enemies/bug/attack/00027.png" id="18_8xmo2"]
[ext_resource type="Texture2D" uid="uid://b225gygcfjx5w" path="res://assets/graphics/enemies/bug/attack/00028.png" id="19_c4m46"]
[ext_resource type="Texture2D" uid="uid://qw54yw772hla" path="res://assets/graphics/enemies/bug/attack/00029.png" id="20_i5wqs"]
[ext_resource type="Texture2D" uid="uid://w3a26r80oq7b" path="res://assets/graphics/enemies/bug/attack/00030.png" id="21_v6eaf"]
[ext_resource type="Texture2D" uid="uid://c6o4g2fkfmkl8" path="res://assets/graphics/enemies/bug/walk/00000.png" id="22_4ojs0"]
[ext_resource type="Texture2D" uid="uid://wqqj2xattvf1" path="res://assets/graphics/enemies/bug/walk/00001.png" id="23_fcud2"]
[ext_resource type="Texture2D" uid="uid://dd02ou711tfdj" path="res://assets/graphics/enemies/bug/walk/00002.png" id="24_a081h"]
[ext_resource type="Texture2D" uid="uid://deqimd183rtmb" path="res://assets/graphics/enemies/bug/walk/00003.png" id="25_pr7q3"]
[ext_resource type="Texture2D" uid="uid://c866ltr4u7g2f" path="res://assets/graphics/enemies/bug/walk/00004.png" id="26_j4sb2"]
[ext_resource type="Texture2D" uid="uid://dyumggef10wqo" path="res://assets/graphics/enemies/bug/walk/00005.png" id="27_8pldx"]
[ext_resource type="Texture2D" uid="uid://ys841ij74d1l" path="res://assets/graphics/enemies/bug/walk/00006.png" id="28_88uy3"]
[ext_resource type="Texture2D" uid="uid://bhmac4ygeneg1" path="res://assets/graphics/enemies/bug/walk/00007.png" id="29_5u6gl"]
[ext_resource type="Texture2D" uid="uid://ovjworboj6ay" path="res://assets/graphics/enemies/bug/walk/00008.png" id="30_8phhj"]
[ext_resource type="Texture2D" uid="uid://ctwvnf8lpmn65" path="res://assets/graphics/explosions/grunge.png" id="33_xww0a"]
[ext_resource type="AudioStream" uid="uid://b2cn5is62e73h" path="res://assets/audio/organic_impact.mp3" id="34_uc11a"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ps8cy"]
radius = 480.0
height = 1740.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xww0a"]
shader = ExtResource("2_abc4i")
shader_parameter/colour = Color(0.6674, 0.872486, 0.869952, 1)
shader_parameter/progress = 0.0

[sub_resource type="SpriteFrames" id="SpriteFrames_8llbs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_xtffu")
}, {
"duration": 1.0,
"texture": ExtResource("2_jahts")
}, {
"duration": 1.0,
"texture": ExtResource("3_abc4i")
}, {
"duration": 1.0,
"texture": ExtResource("4_xww0a")
}, {
"duration": 1.0,
"texture": ExtResource("5_uc11a")
}, {
"duration": 1.0,
"texture": ExtResource("6_ey6sa")
}, {
"duration": 1.0,
"texture": ExtResource("7_5fik3")
}, {
"duration": 1.0,
"texture": ExtResource("8_aa7ts")
}, {
"duration": 1.0,
"texture": ExtResource("9_1j4mh")
}, {
"duration": 1.0,
"texture": ExtResource("10_aos45")
}, {
"duration": 1.0,
"texture": ExtResource("11_wow0q")
}, {
"duration": 1.0,
"texture": ExtResource("12_pj5iq")
}, {
"duration": 1.0,
"texture": ExtResource("13_a8u0u")
}, {
"duration": 1.0,
"texture": ExtResource("14_i4x00")
}, {
"duration": 1.0,
"texture": ExtResource("15_vthgq")
}, {
"duration": 1.0,
"texture": ExtResource("16_w8vyc")
}, {
"duration": 1.0,
"texture": ExtResource("17_d3kgc")
}, {
"duration": 1.0,
"texture": ExtResource("18_8xmo2")
}, {
"duration": 1.0,
"texture": ExtResource("19_c4m46")
}, {
"duration": 1.0,
"texture": ExtResource("20_i5wqs")
}, {
"duration": 1.0,
"texture": ExtResource("21_v6eaf")
}],
"loop": false,
"name": &"attack",
"speed": 48.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_4ojs0")
}, {
"duration": 1.0,
"texture": ExtResource("23_fcud2")
}, {
"duration": 1.0,
"texture": ExtResource("24_a081h")
}, {
"duration": 1.0,
"texture": ExtResource("25_pr7q3")
}, {
"duration": 1.0,
"texture": ExtResource("26_j4sb2")
}, {
"duration": 1.0,
"texture": ExtResource("27_8pldx")
}, {
"duration": 1.0,
"texture": ExtResource("28_88uy3")
}, {
"duration": 1.0,
"texture": ExtResource("29_5u6gl")
}, {
"duration": 1.0,
"texture": ExtResource("30_8phhj")
}],
"loop": true,
"name": &"walk",
"speed": 20.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_p2spe"]
radius = 9230.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0qd4a"]
radius = 960.052

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_uc11a"]
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_ey6sa"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_5fik3"]
curve = SubResource("Curve_ey6sa")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_aa7ts"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3(1, 1, 0)
spread = 180.0
radial_velocity_min = 100.0
radial_velocity_max = 150.0
gravity = Vector3(0, 0, 0)
scale_min = 0.3
scale_max = 0.5
scale_curve = SubResource("CurveTexture_5fik3")
anim_offset_max = 1.0

[node name="Bug" type="CharacterBody2D" groups=["Bugs", "Entity"]]
scale = Vector2(0.1, 0.1)
collision_layer = 2
collision_mask = 15
script = ExtResource("1_jahts")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-110, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ps8cy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_xww0a")
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_8llbs")
animation = &"attack"

[node name="Areas" type="Node2D" parent="."]

[node name="NoticeArea" type="Area2D" parent="Areas"]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/NoticeArea"]
shape = SubResource("CircleShape2D_p2spe")

[node name="AttackArea" type="Area2D" parent="Areas"]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/AttackArea"]
shape = SubResource("CircleShape2D_0qd4a")

[node name="Timers" type="Node" parent="."]

[node name="AttackCooldown" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="InvulnerableTimer" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[node name="Particles" type="Node2D" parent="."]

[node name="HitParticles" type="GPUParticles2D" parent="Particles"]
modulate = Color(0.172549, 0.176471, 0.0862745, 0.901961)
material = SubResource("CanvasItemMaterial_uc11a")
emitting = false
amount = 40
texture = ExtResource("33_xww0a")
lifetime = 0.5
one_shot = true
process_material = SubResource("ParticleProcessMaterial_aa7ts")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("34_uc11a")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Areas/NoticeArea" to="." method="_on_notice_area_body_entered"]
[connection signal="body_exited" from="Areas/NoticeArea" to="." method="_on_notice_area_body_exited"]
[connection signal="body_entered" from="Areas/AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="Areas/AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="Timers/AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="Timers/InvulnerableTimer" to="." method="_on_invulnerable_timer_timeout"]
